# search

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  NOTES  autogen.sh  config.status  configure  configure.ac  libtool  readme.md  readme.txt
src/: Makefile  Makefile.am  Makefile.in  array.h  config.h  config.h.in  configure  configure.ac  main  main.cpp  parcours.cpp  parcours.h  parcours.h.in~  print.cpp  print.h  search  search.cpp  search.h  stamp-h1  stats.cpp  stats.h
src/.deps/: main.Po  parcours.Plo  print.Plo  search.Plo
src/.libs/: libSearch.so.0  libSearch.so.0.0.0  search
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
